deploy: 835f76846fa18e4e69d15791113fc4aa56f11233

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
+                        <h1 id="introduction"><a class="header" href="#introduction">INTRODUCTION</a></h1>
+<p>Inspiration from <a href="https://mobile.twitter.com/ricemaximalist">RiceMaximalist</a> journal <a href="https://rice-daily.super.site/">rice-daily.super.site</a></p>
 
                     </main>
 
