--- a/print.html
+++ b/print.html
@@ -142,7 +142,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
+                        <h1 id="introduction"><a class="header" href="#introduction">INTRODUCTION</a></h1>
+<p>Inspiration from <a href="https://mobile.twitter.com/ricemaximalist">RiceMaximalist</a> journal <a href="https://rice-daily.super.site/">rice-daily.super.site</a></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="installation"><a class="header" href="#installation">Installation</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="reading-books"><a class="header" href="#reading-books">Reading Books</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="creating-a-book"><a class="header" href="#creating-a-book">Creating a Book</a></h1>
