deploy: 0de08a36d4c4ceeef51ad79c66ea83c71af0d8eb

--- a/print.html
+++ b/print.html
@@ -145,8 +145,8 @@
                         <h1 id="introduction"><a class="header" href="#introduction">INTRODUCTION</a></h1>
 <p>Inspiration from <a href="https://mobile.twitter.com/ricemaximalist">RiceMaximalist</a> journal <a href="https://rice-daily.super.site/">rice-daily.super.site</a></p>
 <div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><ul>
-<li>List of tools - (https://sovs.notion.site/sovs/Sov-s-Compendium-41f097d28dae4d09801f10cde1b2d03b)</li>
-<li>Eth metrics to track - (https://dune.com/blockworks_research/eth)</li>
+<li>List of tools - <a href="https://sovs.notion.site/sovs/Sov-s-Compendium-41f097d28dae4d09801f10cde1b2d03b">SOV Compendium</a></li>
+<li>Eth metrics to track - <a href="https://dune.com/blockworks_research/eth">Blockworks Dune</a></li>
 </ul>
 
                     </main>
