deploy: a43ff7254d8e3e52c5a2fe44238a8e16f8166fb1

--- a/December22/12-24-22.html
+++ b/December22/12-24-22.html
@@ -142,8 +142,8 @@
                 <div id="content" class="content">
                     <main>
                         <ul>
-<li>List of tools - <a href="https://sovs.notion.site/sovs/Sov-s-Compendium-41f097d28dae4d09801f10cde1b2d03b">SOV Compendium</a></li>
-<li>Eth metrics to track - <a href="https://dune.com/blockworks_research/eth">Blockworks Dune</a></li>
+<li>List of tools - <a href="https://sovs.notion.site/sovs/Sov-s-Compendium-41f097d28dae4d09801f10cde1b2d03b">https://sovs.notion.site/sovs/Sov-s-Compendium-41f097d28dae4d09801f10cde1b2d03b</a></li>
+<li>Eth metrics to track - <a href="https://dune.com/blockworks_research/eth">https://dune.com/blockworks_research/eth</a></li>
 </ul>
 
                     </main>
