--- a/print.html
+++ b/print.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Introduction</a></li><li class="chapter-item expanded "><a href="December22/December22.html"><strong aria-hidden="true">1.</strong> December, 2022</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="December22/12-24-22.html"><strong aria-hidden="true">1.1.</strong> Saturday, December 24, 2022</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Introduction</a></li><li class="chapter-item expanded "><a href="December22/December22.html"><strong aria-hidden="true">1.</strong> December, 2022</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="December22/12-24-22.html"><strong aria-hidden="true">1.1.</strong> Saturday, December 24, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-25-22.html"><strong aria-hidden="true">1.2.</strong> Sunday, December 25, 2022</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -147,6 +147,19 @@
 <div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><ul>
 <li>SOV compendium list of tools - <a href="https://sovs.notion.site/sovs/Sov-s-Compendium-41f097d28dae4d09801f10cde1b2d03b">https://sovs.notion.site/sovs/Sov-s-Compendium-41f097d28dae4d09801f10cde1b2d03b</a></li>
 <li>Blockworks research Dune Eth metrics - <a href="https://dune.com/blockworks_research/eth">https://dune.com/blockworks_research/eth</a></li>
+</ul>
+<div style="break-before: page; page-break-before: always;"></div><ul>
+<li>Cross chain monitoring app streamlit - <a href="https://cross-chain-monitoring.streamlit.app/DEXs">https://cross-chain-monitoring.streamlit.app/DEXs</a></li>
+<li>Beacon chain validator ratings rated network explorer - <a href="https://www.rated.network/?network=mainnet&amp;view=entity">https://www.rated.network/?network=mainnet&amp;view=entity</a></li>
+<li>cryptofees revenue for chains and dapps - <a href="https://cryptofees.info/">https://cryptofees.info/</a></li>
+<li>defillama protocol fees and revenue - <a href="https://defillama.com/fees">https://defillama.com/fees</a></li>
+<li>tokenterminal protocol fees and revenue - <a href="https://tokenterminal.com/terminal/metrics/fees">https://tokenterminal.com/terminal/metrics/fees</a></li>
+<li>optimism bedrock dev blog - <a href="https://dev.optimism.io/introducing-optimism-bedrock/">https://dev.optimism.io/introducing-optimism-bedrock/</a></li>
+<li>optimism 2022 year in review blog - <a href="https://optimism.mirror.xyz/O8DesNLJ5HXD6C55Lwnks8xIPU45BjJlwZARKWBqXuE">https://optimism.mirror.xyz/O8DesNLJ5HXD6C55Lwnks8xIPU45BjJlwZARKWBqXuE</a></li>
+<li>optimism bedrock dev documentation - <a href="https://community.optimism.io/docs/developers/bedrock/how-is-bedrock-different/">https://community.optimism.io/docs/developers/bedrock/how-is-bedrock-different/</a></li>
+<li>BuidlGuidl abi ninja interact with any eth contract gui - <a href="https://github.com/BuidlGuidl/abi.ninja">https://github.com/BuidlGuidl/abi.ninja</a></li>
+<li>defi mochi notion - <a href="https://defi-mochi.notion.site/defi-mochi/d2cf08cb79254dcf8f30e08cc38761f4?v=81df8226157849ee94a1c859c1e13329">https://defi-mochi.notion.site/defi-mochi/d2cf08cb79254dcf8f30e08cc38761f4?v=81df8226157849ee94a1c859c1e13329</a></li>
+<li>defi mochi dune dashboards - <a href="https://dune.com/defimochi">https://dune.com/defimochi</a></li>
 </ul>
 
                     </main>
