deploy: 32ab69ae5add5b31130a210cb7a31348742cc09c

--- a/December22/12-27-22.html
+++ b/December22/12-27-22.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Sunday, December 25, 2022 - wiki</title>
+        <title>Tuesday, December 27, 2022 - wiki</title>
 
 
         <!-- Custom HTML head -->
@@ -80,7 +80,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../December22/December22.html"><strong aria-hidden="true">1.</strong> December, 2022</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../December22/12-24-22.html"><strong aria-hidden="true">1.1.</strong> Saturday, December 24, 2022</a></li><li class="chapter-item expanded "><a href="../December22/12-25-22.html" class="active"><strong aria-hidden="true">1.2.</strong> Sunday, December 25, 2022</a></li><li class="chapter-item expanded "><a href="../December22/12-27-22.html"><strong aria-hidden="true">1.3.</strong> Tuesday, December 27, 2022</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../December22/December22.html"><strong aria-hidden="true">1.</strong> December, 2022</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../December22/12-24-22.html"><strong aria-hidden="true">1.1.</strong> Saturday, December 24, 2022</a></li><li class="chapter-item expanded "><a href="../December22/12-25-22.html"><strong aria-hidden="true">1.2.</strong> Sunday, December 25, 2022</a></li><li class="chapter-item expanded "><a href="../December22/12-27-22.html" class="active"><strong aria-hidden="true">1.3.</strong> Tuesday, December 27, 2022</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -141,31 +141,24 @@
 
                 <div id="content" class="content">
                     <main>
-                        <ul>
-<li>Cross chain monitoring app streamlit - <a href="https://cross-chain-monitoring.streamlit.app/DEXs">https://cross-chain-monitoring.streamlit.app/DEXs</a></li>
-<li>Beacon chain validator ratings rated network explorer - <a href="https://www.rated.network/?network=mainnet&amp;view=entity">https://www.rated.network/?network=mainnet&amp;view=entity</a></li>
-<li>cryptofees revenue for chains and dapps - <a href="https://cryptofees.info/">https://cryptofees.info/</a></li>
-<li>defillama protocol fees and revenue - <a href="https://defillama.com/fees">https://defillama.com/fees</a></li>
-<li>tokenterminal protocol fees and revenue - <a href="https://tokenterminal.com/terminal/metrics/fees">https://tokenterminal.com/terminal/metrics/fees</a></li>
-<li>optimism bedrock dev blog - <a href="https://dev.optimism.io/introducing-optimism-bedrock/">https://dev.optimism.io/introducing-optimism-bedrock/</a></li>
-<li>optimism 2022 year in review blog - <a href="https://optimism.mirror.xyz/O8DesNLJ5HXD6C55Lwnks8xIPU45BjJlwZARKWBqXuE">https://optimism.mirror.xyz/O8DesNLJ5HXD6C55Lwnks8xIPU45BjJlwZARKWBqXuE</a></li>
-<li>optimism bedrock dev documentation - <a href="https://community.optimism.io/docs/developers/bedrock/how-is-bedrock-different/">https://community.optimism.io/docs/developers/bedrock/how-is-bedrock-different/</a></li>
-<li>BuidlGuidl abi ninja interact with any eth contract gui - <a href="https://github.com/BuidlGuidl/abi.ninja">https://github.com/BuidlGuidl/abi.ninja</a></li>
-<li>defi mochi notion - <a href="https://defi-mochi.notion.site/defi-mochi/d2cf08cb79254dcf8f30e08cc38761f4?v=81df8226157849ee94a1c859c1e13329">https://defi-mochi.notion.site/defi-mochi/d2cf08cb79254dcf8f30e08cc38761f4?v=81df8226157849ee94a1c859c1e13329</a></li>
-<li>defi mochi dune dashboards - <a href="https://dune.com/defimochi">https://dune.com/defimochi</a></li>
+                        <h3 id="transaction-explorers"><a class="header" href="#transaction-explorers">Transaction explorers</a></h3>
+<ul>
+<li>ethtx explorer - https://ethtx.info/](https://ethtx.info/</li>
+<li>samczsun tx explorer - https://tx.eth.samczsun.com/</li>
+<li>tenderly tx explorer - https://dashboard.tenderly.co/explorer?utm_source=homepage</li>
+<li>eigenphi tx explorer - https://tx.eigenphi.io/analyseTransaction</li>
+<li>palkeo tx explorer - https://oko.palkeo.com/</li>
+<li>tokenflow tx explorer - https://tokenflow.live/</li>
 </ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../December22/12-24-22.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../December22/12-25-22.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../December22/12-27-22.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -173,13 +166,10 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../December22/12-24-22.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../December22/12-25-22.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../December22/12-27-22.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
-                    </a>
             </nav>
 
         </div>
