--- a/print.html
+++ b/print.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Introduction</a></li><li class="chapter-item expanded "><a href="December22/December22.html"><strong aria-hidden="true">1.</strong> December, 2022</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="December22/12-24-22.html"><strong aria-hidden="true">1.1.</strong> Saturday, December 24, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-25-22.html"><strong aria-hidden="true">1.2.</strong> Sunday, December 25, 2022</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Introduction</a></li><li class="chapter-item expanded "><a href="December22/December22.html"><strong aria-hidden="true">1.</strong> December, 2022</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="December22/12-24-22.html"><strong aria-hidden="true">1.1.</strong> Saturday, December 24, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-25-22.html"><strong aria-hidden="true">1.2.</strong> Sunday, December 25, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-27-22.html"><strong aria-hidden="true">1.3.</strong> Tuesday, December 27, 2022</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -160,6 +160,15 @@
 <li>BuidlGuidl abi ninja interact with any eth contract gui - <a href="https://github.com/BuidlGuidl/abi.ninja">https://github.com/BuidlGuidl/abi.ninja</a></li>
 <li>defi mochi notion - <a href="https://defi-mochi.notion.site/defi-mochi/d2cf08cb79254dcf8f30e08cc38761f4?v=81df8226157849ee94a1c859c1e13329">https://defi-mochi.notion.site/defi-mochi/d2cf08cb79254dcf8f30e08cc38761f4?v=81df8226157849ee94a1c859c1e13329</a></li>
 <li>defi mochi dune dashboards - <a href="https://dune.com/defimochi">https://dune.com/defimochi</a></li>
+</ul>
+<div style="break-before: page; page-break-before: always;"></div><h3 id="transaction-explorers"><a class="header" href="#transaction-explorers">Transaction explorers</a></h3>
+<ul>
+<li>ethtx explorer - https://ethtx.info/](https://ethtx.info/</li>
+<li>samczsun tx explorer - https://tx.eth.samczsun.com/</li>
+<li>tenderly tx explorer - https://dashboard.tenderly.co/explorer?utm_source=homepage</li>
+<li>eigenphi tx explorer - https://tx.eigenphi.io/analyseTransaction</li>
+<li>palkeo tx explorer - https://oko.palkeo.com/</li>
+<li>tokenflow tx explorer - https://tokenflow.live/</li>
 </ul>
 
                     </main>
