deploy: 7665f19258159b53b960de7a80bce4be48db45d5

--- a/December22/12-27-22.html
+++ b/December22/12-27-22.html
@@ -143,7 +143,7 @@
                     <main>
                         <h3 id="transaction-explorers"><a class="header" href="#transaction-explorers">Transaction explorers</a></h3>
 <ul>
-<li>ethtx explorer - https://ethtx.info/](https://ethtx.info/</li>
+<li>ethtx explorer - https://ethtx.info/</li>
 <li>samczsun tx explorer - https://tx.eth.samczsun.com/</li>
 <li>tenderly tx explorer - https://dashboard.tenderly.co/explorer?utm_source=homepage</li>
 <li>eigenphi tx explorer - https://tx.eigenphi.io/analyseTransaction</li>
