--- a/print.html
+++ b/print.html
@@ -163,7 +163,7 @@
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h3 id="transaction-explorers"><a class="header" href="#transaction-explorers">Transaction explorers</a></h3>
 <ul>
-<li>ethtx explorer - https://ethtx.info/](https://ethtx.info/</li>
+<li>ethtx explorer - https://ethtx.info/</li>
 <li>samczsun tx explorer - https://tx.eth.samczsun.com/</li>
 <li>tenderly tx explorer - https://dashboard.tenderly.co/explorer?utm_source=homepage</li>
 <li>eigenphi tx explorer - https://tx.eigenphi.io/analyseTransaction</li>
