--- a/print.html
+++ b/print.html
@@ -163,12 +163,13 @@
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h3 id="transaction-explorers"><a class="header" href="#transaction-explorers">Transaction explorers</a></h3>
 <ul>
-<li>ethtx explorer - https://ethtx.info/</li>
-<li>samczsun tx explorer - https://tx.eth.samczsun.com/</li>
-<li>tenderly tx explorer - https://dashboard.tenderly.co/explorer?utm_source=homepage</li>
-<li>eigenphi tx explorer - https://tx.eigenphi.io/analyseTransaction</li>
-<li>palkeo tx explorer - https://oko.palkeo.com/</li>
-<li>tokenflow tx explorer - https://tokenflow.live/</li>
+<li>ethtx explorer - <a href="https://ethtx.info/">https://ethtx.info/</a></li>
+<li>samczsun tx explorer - <a href="https://tx.eth.samczsun.com/">https://tx.eth.samczsun.com/</a></li>
+<li>tenderly tx explorer - <a href="https://dashboard.tenderly.co/explorer?utm_source=homepage">https://dashboard.tenderly.co/explorer?utm_source=homepage</a></li>
+<li>eigenphi tx explorer - <a href="https://tx.eigenphi.io/analyseTransaction">https://tx.eigenphi.io/analyseTransaction</a></li>
+<li>palkeo tx explorer - <a href="https://oko.palkeo.com/">https://oko.palkeo.com/</a></li>
+<li>tokenflow tx explorer - <a href="https://tokenflow.live/">https://tokenflow.live/</a></li>
+<li></li>
 </ul>
 
                     </main>
