--- a/print.html
+++ b/print.html
@@ -169,7 +169,57 @@
 <li>eigenphi tx explorer - <a href="https://tx.eigenphi.io/analyseTransaction">https://tx.eigenphi.io/analyseTransaction</a></li>
 <li>palkeo tx explorer - <a href="https://oko.palkeo.com/">https://oko.palkeo.com/</a></li>
 <li>tokenflow tx explorer - <a href="https://tokenflow.live/">https://tokenflow.live/</a></li>
-<li></li>
+</ul>
+<h3 id="pretend-to-be-another-wallet"><a class="header" href="#pretend-to-be-another-wallet">Pretend to be another wallet</a></h3>
+<ul>
+<li>impersonator - <a href="https://www.impersonator.xyz/">https://www.impersonator.xyz/</a></li>
+</ul>
+<h3 id="kzg"><a class="header" href="#kzg">KZG</a></h3>
+<ul>
+<li>kzg ceremony github - <a href="https://github.com/ethereum/kzg-ceremony">https://github.com/ethereum/kzg-ceremony</a></li>
+</ul>
+<h3 id="browser-extensions-to-analyze-transactions"><a class="header" href="#browser-extensions-to-analyze-transactions">browser extensions to analyze transactions</a></h3>
+<ul>
+<li>theInterceptor - <a href="https://github.com/DarkFlorist/TheInterceptor">https://github.com/DarkFlorist/TheInterceptor</a></li>
+<li>fire wallet extension - <a href="https://www.joinfire.xyz/?utm_source=twitter&amp;utm_medium=profile">https://www.joinfire.xyz/?utm_source=twitter&amp;utm_medium=profile</a></li>
+<li>revoke.cash - <a href="https://revoke.cash/">https://revoke.cash/</a></li>
+<li>wallet guard - <a href="https://walletguard.app/">https://walletguard.app/</a></li>
+<li>pocket universe - <a href="https://www.pocketuniverse.app/">https://www.pocketuniverse.app/</a></li>
+</ul>
+<h3 id="defi-and-dashboards"><a class="header" href="#defi-and-dashboards">defi and dashboards</a></h3>
+<ul>
+<li>chicken bonds profitability - <a href="https://curve.substack.com/p/december-6-2022-chicken-bond-profitability">https://curve.substack.com/p/december-6-2022-chicken-bond-profitability</a></li>
+<li>balancer governance shenanigans - <a href="https://messari.io/report/governor-note-the-vebal-wars">https://messari.io/report/governor-note-the-vebal-wars</a></li>
+<li>Humpy remaining veBAL balance - <a href="https://www.defiwars.xyz/wars/balancer">https://www.defiwars.xyz/wars/balancer</a></li>
+<li>lp history dashboard - <a href="https://revert.finance/#/initiator">https://revert.finance/#/initiator</a></li>
+<li>onchain analytics - <a href="https://analyzooor.super.site/">https://analyzooor.super.site/</a></li>
+<li>euler research guide - <a href="https://www.euler.finance/blog/researching-euler">https://www.euler.finance/blog/researching-euler</a></li>
+</ul>
+<h3 id="layer"><a class="header" href="#layer">layer</a></h3>
+<ul>
+<li>eigenlayer explanation - <a href="https://inevitableeth.com/en/home/ethereum/upgrades/middleware/eigenlayer">https://inevitableeth.com/en/home/ethereum/upgrades/middleware/eigenlayer</a></li>
+<li>goerli dev activity dune dashboard - <a href="https://dune.com/niftytable/goerli-developer-activity">https://dune.com/niftytable/goerli-developer-activity</a></li>
+<li>l2 gas consumption dune dashboard - <a href="https://dune.com/funnyking/L2-Gas-Consumption">https://dune.com/funnyking/L2-Gas-Consumption</a></li>
+<li>l2 arbitrum and optimism comparison dune dashboard - <a href="https://dune.com/blockworks_research/l2-comparison-dashboard">https://dune.com/blockworks_research/l2-comparison-dashboard</a></li>
+<li>cosmos explorer - <a href="https://mapofzones.com/home?columnKey=ibcVolume&amp;period=24h">https://mapofzones.com/home?columnKey=ibcVolume&amp;period=24h</a></li>
+<li>5 years mev research james prestwich - <a href="https://medium.com/@Prestwich/mev-c417d9a5eb3d">https://medium.com/@Prestwich/mev-c417d9a5eb3d</a></li>
+</ul>
+<h3 id="misc"><a class="header" href="#misc">misc</a></h3>
+<ul>
+<li>private key database with balance checker - <a href="https://keys.lol/">https://keys.lol/</a></li>
+</ul>
+<h3 id="solidity"><a class="header" href="#solidity">solidity</a></h3>
+<ul>
+<li>solidity sol2uml diff contracts - <a href="https://github.com/naddison36/sol2uml/releases/tag/v2.4.0">https://github.com/naddison36/sol2uml/releases/tag/v2.4.0</a></li>
+</ul>
+<h3 id="security"><a class="header" href="#security">security</a></h3>
+<ul>
+<li>secret network sgx hack - <a href="https://sgx.fail/">https://sgx.fail/</a></li>
+<li>arbitrum delay attack solve - <a href="https://offchain.medium.com/solutions-to-delay-attacks-on-rollups-434f9d05a07a">https://offchain.medium.com/solutions-to-delay-attacks-on-rollups-434f9d05a07a</a></li>
+</ul>
+<h3 id="grants"><a class="header" href="#grants">grants</a></h3>
+<ul>
+<li>uniswap foundation grants - <a href="https://uniswapfoundation.mirror.xyz/h3bNWvussGBX5wm2oAuvS9RP8BTPgD6d80A_eL5lltU">https://uniswapfoundation.mirror.xyz/h3bNWvussGBX5wm2oAuvS9RP8BTPgD6d80A_eL5lltU</a></li>
 </ul>
 
                     </main>
