--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html" class="active">Introduction</a></li><li class="chapter-item expanded "><a href="December22/December22.html"><strong aria-hidden="true">1.</strong> December, 2022</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="December22/12-24-22.html"><strong aria-hidden="true">1.1.</strong> Saturday, December 24, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-25-22.html"><strong aria-hidden="true">1.2.</strong> Sunday, December 25, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-27-22.html"><strong aria-hidden="true">1.3.</strong> Tuesday, December 27, 2022</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html" class="active">Introduction</a></li><li class="chapter-item expanded "><a href="December22/December22.html"><strong aria-hidden="true">1.</strong> December, 2022</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="December22/12-24-22.html"><strong aria-hidden="true">1.1.</strong> Saturday, December 24, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-25-22.html"><strong aria-hidden="true">1.2.</strong> Sunday, December 25, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-27-22.html"><strong aria-hidden="true">1.3.</strong> Tuesday, December 27, 2022</a></li><li class="chapter-item expanded "><a href="December22/12-30-22.html"><strong aria-hidden="true">1.4.</strong> Wednesday, December 30, 2022</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -143,6 +143,16 @@
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">INTRODUCTION</a></h1>
 <p>Inspiration from <a href="https://mobile.twitter.com/ricemaximalist">RiceMaximalist</a> journal <a href="https://rice-daily.super.site/">rice-daily.super.site</a></p>
+<h1 id="rust-snippets"><a class="header" href="#rust-snippets">Rust snippets</a></h1>
+<pre><pre class="playground"><code class="language-rust">// format strings with [] and ()
+fn main() {
+    let inputs = [&quot;string1&quot;, &quot;string2&quot;, &quot;string3&quot;];
+
+    for input in &amp;inputs {
+        let output = format!(&quot; - [{input}] ({input})&quot;);
+        println!(&quot;{output}&quot;);
+    }
+}</code></pre></pre>
 
                     </main>
 
