deploy: e59a5a94dd198be741bb7a2036851b76881a1a9a

--- a/December22/12-30-22.html
+++ b/December22/12-30-22.html
@@ -173,67 +173,67 @@
 <li><a href="https://twitter.com/cubansedge/status/1608436255389552641?t=Psmdz8BCl1hQhHT9KfmLQA&amp;s=19">https://twitter.com/cubansedge/status/1608436255389552641?t=Psmdz8BCl1hQhHT9KfmLQA&amp;s=19</a></li>
 </ul>
 </li>
-<li>text 
+<li>scream.sh possible rug pull instead of hack 
 <ul>
 <li><a href="https://twitter.com/cryptohamm/status/1608200367073857536?t=EczWq5mSKdE5FwMm6bJfVw&amp;s=19">https://twitter.com/cryptohamm/status/1608200367073857536?t=EczWq5mSKdE5FwMm6bJfVw&amp;s=19</a></li>
 </ul>
 </li>
-<li>text 
+<li>scroll zkp 
 <ul>
 <li><a href="https://twitter.com/Newmancapitalvc/status/1608016874075455490?t=U-4AC0EYCmmgBvw0oyHKfw&amp;s=19">https://twitter.com/Newmancapitalvc/status/1608016874075455490?t=U-4AC0EYCmmgBvw0oyHKfw&amp;s=19</a></li>
 </ul>
 </li>
-<li>text 
+<li>sui dev team possible clawback from ftx funded $200 million 
 <ul>
 <li><a href="https://twitter.com/WuBlockchain/status/1608295790312554497?t=Mb9RgwfJpUZy4biPkIhh-w&amp;s=19">https://twitter.com/WuBlockchain/status/1608295790312554497?t=Mb9RgwfJpUZy4biPkIhh-w&amp;s=19</a></li>
 </ul>
 </li>
-<li>text 
+<li>solidity shell github 
 <ul>
 <li><a href="https://github.com/tintinweb/solidity-shell">https://github.com/tintinweb/solidity-shell</a></li>
 </ul>
 </li>
-<li>text 
+<li>dan romero farcaster how it works youtube link
 <ul>
 <li><a href="https://twitter.com/dwr/status/1608210062182342662?t=3ePcjIajkgMS2WG_xNTVxg&amp;s=19">https://twitter.com/dwr/status/1608210062182342662?t=3ePcjIajkgMS2WG_xNTVxg&amp;s=19</a></li>
 </ul>
 </li>
-<li>text 
+<li>eigenlayer 2022 community contributions 
 <ul>
 <li><a href="https://twitter.com/eigenlayer/status/1608197773995962368?t=OnPZAoAY_z4hLrAJLKeM-w&amp;s=19">https://twitter.com/eigenlayer/status/1608197773995962368?t=OnPZAoAY_z4hLrAJLKeM-w&amp;s=19</a></li>
 </ul>
 </li>
-<li>text 
+<li>evm disassembler in regex 
 <ul>
 <li><a href="https://twitter.com/0x796/status/1608039943582142464?s=20">https://twitter.com/0x796/status/1608039943582142464?s=20</a></li>
 </ul>
 </li>
-<li>text 
+<li>babylonians paid substack 
 <ul>
 <li><a href="https://thebabylonians.substack.com">https://thebabylonians.substack.com</a></li>
 </ul>
 </li>
-<li>text 
+<li>gmx referrals dashboard 
 <ul>
 <li><a href="https://www.gmxreferrals.com/">https://www.gmxreferrals.com/</a></li>
 </ul>
 </li>
-<li>text 
+<li>on chain intrigue telegram channel for 3ac, ftx, etc 
 <ul>
 <li><a href="https://t.me/OnChainIntrigue">https://t.me/OnChainIntrigue</a></li>
 </ul>
 </li>
-<li>text 
+<li>moment of zen podcast with dan romero 
 <ul>
 <li><a href="https://twitter.com/dwr/status/1607832338506858496?t=L3eeQcQYmjgQjnf_fcQhCg&amp;s=19">https://twitter.com/dwr/status/1607832338506858496?t=L3eeQcQYmjgQjnf_fcQhCg&amp;s=19</a></li>
 </ul>
 </li>
-<li>text 
+<li>crocswap founder podcast 
 <ul>
 <li><a href="https://twitter.com/0xdoug/status/1470742519394807808?t=25QC5OuiY7TEoe000axo-w&amp;s=19">https://twitter.com/0xdoug/status/1470742519394807808?t=25QC5OuiY7TEoe000axo-w&amp;s=19</a></li>
 </ul>
 </li>
-<li>text 
+<li>erigon cl database schema 
 <ul>
 <li><a href="https://twitter.com/GiulioRebuffo/status/1607769715778240516?t=g66eGA_weDTd3J-h1bUiPQ&amp;s=19">https://twitter.com/GiulioRebuffo/status/1607769715778240516?t=g66eGA_weDTd3J-h1bUiPQ&amp;s=19</a></li>
 </ul>
