deploy: 9f4e7acdfc352ee9c5c5e1eaf372d07290518215

--- a/December22/12-30-22.html
+++ b/December22/12-30-22.html
@@ -141,7 +141,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="test"><a class="header" href="#test">test</a></h3>
+                        <h3 id="links"><a class="header" href="#links">links</a></h3>
 <ul>
 <li>degensensei this week on chain substack 
 <ul>
