deploy: 27b17fe5585d323e2e44f64a14f6da84ef7f54a9

--- a/January23/1-1-23.html
+++ b/January23/1-1-23.html
@@ -148,6 +148,11 @@
 <li><a href="https://pintail.xyz/">https://pintail.xyz/</a></li>
 </ul>
 </li>
+<li>slurpxbt python defillama wrapper
+<ul>
+<li><a href="https://github.com/slurpxbt/defillama_library">https://github.com/slurpxbt/defillama_library</a></li>
+</ul>
+</li>
 </ul>
 
                     </main>
