--- a/print.html
+++ b/print.html
@@ -161,6 +161,11 @@ fn main() {
 <li><a href="https://pintail.xyz/">https://pintail.xyz/</a></li>
 </ul>
 </li>
+<li>slurpxbt python defillama wrapper
+<ul>
+<li><a href="https://github.com/slurpxbt/defillama_library">https://github.com/slurpxbt/defillama_library</a></li>
+</ul>
+</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><ul>
 <li>SOV compendium list of tools - <a href="https://sovs.notion.site/sovs/Sov-s-Compendium-41f097d28dae4d09801f10cde1b2d03b">https://sovs.notion.site/sovs/Sov-s-Compendium-41f097d28dae4d09801f10cde1b2d03b</a></li>
